2009-01-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10179: sys_action menu doesn't respect hidden and returns empty ul if there are no entries

2009-01-23  Michael Stucki  <michael@typo3.org>

	* Fixed bug #10231: split() is deprecated in PHP 5.3 (patch by Karsten Dambekalns)

2009-01-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9345: Bug: CSV export includes _CLIPBOARD_ in header row (thanks to Christian Kuhn)
	* Fixed bug #10220: Feature: Get some unit tests for the core (thanks to Oliver Klee)

2009-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #10195: htmlArea RTE: Update RTE about info
	* Added feature #10219: htmlArea RTE: Clean up unused localization files
	* Fixed bug #9785: htmlArea RTE: Disabling images in RTE still leaves the toolbar button
	* Fixed bug #9965: htmlArea RTE: IE jumps down to last RTE input

2009-01-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10206: htmlArea RTE: Allow to hide any button

2009-01-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9774: Incorrect validation of allowed classes in RTE transformation

2009-01-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #10186: Time shifting (again) in datetime fields (followup to Bug#8746; thanks to Ernesto Baschny)
	* Fixed bug #10146: Session fixation vulnerability in user authentication  (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10159: XSS vulnerability in workspace module (thanks to the TYPO3 Security Team and especially Marcus Krause)

2009-01-20  Ingo Renner  <ingo@typo3.org>

	* Added missing license statement for using the "Silk" icon set of Mark James according to Creative Commons Attribution 2.5
	* Fixed bug #10134: XSS vulnerability in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)
	* Fixed bug #10133: Command execution in sysext indexed_search (thanks to the TYPO3 Security Team and especially Marcus Krause)